<resources>
    <string name="app_name">Muhisseke</string>
    <string name="title_activity_menu_principal">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="loading">Processando...</string>
    <string name="title_activity_produtos">Produtos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_producao">Produçao</string>
    <string name="title_activity_entradas">Entradas</string>
    <string name="title_activity_vendas">Vendas</string>
    <string name="title_activity_rendimentos">Rendimentos</string>
    <string name="title_activity_efectuar_vendas">Efectuar Vendas</string>
    <string name="title_activity_adicionar_produtos">Adicionar Produtos</string>
    <string name="title_activity_lista_produtos">Produtos</string>
    <string name="title_activity_fundos">Fundos</string>
    <string name="sale_button">Sale</string>
    <string name="new_product">Add new item</string>
    <string name="hint_email_address">supplier@gmail.com</string>
    <string name="supplier_email_title">Supplier E-mail Address</string>
    <string name="supplier_phone_hint">e.g. +49 000-000-000</string>
    <string name="supplier_phone_title">Supplier Phone</string>
    <string name="supplier_name_hint">Candy Supplier GmbH</string>
    <string name="supplier_name_title">Supplier Name</string>
    <string name="quantity_title">Quantity</string>
    <string name="price_title">Price</string>
    <string name="product_name_title">Product Name</string>
    <string name="currency_details">¥ / item</string>
    <string name="action_save">Save item</string>
    <string name="editor_activity_title_new_item">Add new item</string>
    <string name="editor_activity_title_edit_item">Edit item</string>
    <string name="menu_order_item">Order more</string>
    <string name="menu_delete_item">Delete item</string>
    <string name="menu_delete_all_data">Delete all data</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="order_message">You can place an order for this item by phone or e-mail</string>
    <string name="delete_message">Are you sure you want to procede with the deletion?</string>
    <string name="delete">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="empty_list_hint">Start adding some items to your inventory</string>
    <string name="action_add_dummy_data">Add Dummy Data</string>
    <string name="select_image">Select image</string>
    <string name="image">Image</string>
    <string name="unsaved_changes_dialog_msg">There are unsaved changes in the product information. Do you want to continue?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="ex_caf">Ex: Café</string>
    <string name="nome">Nome</string>
    <string name="quantidade">Quantidade</string>
    <string name="saldo">Saldo</string>
    <string name="quan">Quan.</string>
    <string name="pre_o">Preço</string>
    <string name="produtoVenda">Produto</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="conta">Conta</string>
    <string name="title_activity_testado">testado</string>
    <string name="title_activity_feito">feito</string>
    <string name="title_activity_requisicoes">Requisições</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_opcoes_vendas2">Vendas</string>
    <string name="title_activity_efectuar_venda">Efectuar Venda</string>
    <string name="title_activity_vendas_pendentes2">Vendas Pendentes</string>
    <string name="title_activity_historico_vendas">Histótico</string>
    <string name="title_activity_movimentos">Movimentos</string>
    <string name="title_activity_contas">ContasActivity</string>
    <string name="title_activity_relatorios">RelatoriosActivity</string>
</resources>
